style: fixed table overflow

--- a/client/src/components/PokemonTable/PokemonTable.css
+++ b/client/src/components/PokemonTable/PokemonTable.css
@@ -13,9 +13,9 @@
 }
 
 .w-80 {
-  max-width: 80%;
-  min-width: 80%;
-  width: 80%;
+  max-width: 85vw;
+  min-width: 85vw;
+  width: 85vw;
   font-family: "Arcade-Classic", sans-serif;
 }
 .w-20 {
